# jfrulla-ansible-example

./: LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
inventory/: hosts.yml
inventory/group_vars/head/: vars.yml
inventory/host_vars/my-home-server/: vars.yml
playbooks/: deploy.yml
roles/sshd/: README.md
roles/sshd/defaults/: main.yml
roles/sshd/handlers/: main.yml
roles/sshd/meta/: main.yml
roles/sshd/tasks/: main.yml
roles/sshd/templates/: sshd_config.j2
