[project]
name = "uv-ansible"
version = "0.1.0"
description = "Manages Ansible environment for util-ansible repository"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ansible-core>=2.15.13",
    "ansible-lint>=6.8.7",
    "molecule>=6.0.3",
    "passlib>=1.7.4",
    "jmespath>=1.0.1",
    "pymysql>=1.1.1",
]
